output/alpine-web-app-customby-g7-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-web-app-customby-g7
  namespace: alpine-web-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine-web-app-customby-g7
  template:
    metadata:
      labels:
        app: alpine-web-app-customby-g7
    spec:
      containers:
      - name: alpine-web-app-customby-g7
        image: alpine-web-app-customby-g7:3.18
        ports:
        - containerPort: 80
