output/alpine-web-app-customby-g7-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpine-web-app-customby-g7-svc
  namespace: alpine-web-app-ns
spec:
  selector:
    app: alpine-web-app-customby-g7
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
