output/telegraf-agent-customby-g7-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-agent-customby-g7-svc
  namespace: telegraf-agent-ns
spec:
  selector:
    app: telegraf-agent-customby-g7
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
