output/telegraf-agent-customby-g7-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: telegraf-agent-customby-g7-network-policy
  namespace: telegraf-agent-ns
spec:
  podSelector:
    matchLabels:
      app: telegraf-agent-customby-g7
  policyTypes:
    - Ingress
    - Egress
  ingress:
    []
  egress:
    - ports:
      - port: 443
        protocol: TCP
